Fixed layout, scroll for core-menu, align to user section. Now it supports N issues less breakdown the layout

--- a/sc-navbar.css
+++ b/sc-navbar.css
@@ -1,10 +1,11 @@
 :host {
-  height: 100%;
-  width: 100%;
   position: absolute;
   display: block;
+  width: 100%;
+  height: 100%;
   font-family: 'RobotoDraft', sans-serif;
   background-color: #3B4D64;
+  overflow: scroll;
  }
 
 /* To ensure your styling works under the Shadow DOM polyfill, see
@@ -37,6 +38,11 @@ paper-item core-icon {
     height: 100%;
 }
 /* core-menu scope */
+
+core-menu {
+	overflow: scroll;
+	margin-bottom: 65px;
+}
 core-submenu {
 	font-family: 'RobotoDraft', sans-serif;
 	color: #FFF;
@@ -51,13 +57,15 @@ core-submenu.core-selected {
 /* box profile */
 .profileMenu {
 	font-size: 15px;
-	position: absolute;
+	position: fixed;
+	float: left;
+	left: 0;
 	bottom: 0;
 	padding: 12px; 	
 	height: 42px; /* height total is 54px */
-	width: 100%;
 	background-color: #19293E;
 	color: #FFF;
+	width: 100%;
 }
 #avatar {
 	width: 47px;
